--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,27 @@
 language: android
 jdk: oraclejdk8
 dist: trusty
-
 env:
-  global:
-
+  global: 
 android:
   components:
-
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - extra-android-support
-    - build-tools-30.0.3
-    - android-30
-
+  - extra-google-google_play_services
+  - extra-google-m2repository
+  - extra-android-m2repository
+  - extra-android-support
+  - build-tools-30.0.3
+  - android-30
   licenses:
-      - 'android-sdk-preview-license-52d11cd2'
-      - 'android-sdk-license-.+'
-      - 'google-gdk-license-.+'
-
+  - android-sdk-preview-license-52d11cd2
+  - android-sdk-license-.+
+  - google-gdk-license-.+
 before_install:
-  openssl aes-256-cbc -K $encrypted_fd8d34b142d0_key -iv $encrypted_fd8d34b142d0_iv -in google-services.json.enc -out CrowderApp/app/google-services.json -d
+- openssl aes-256-cbc -K $encrypted_ba513513456f_key -iv $encrypted_ba513513456f_iv
+  -in google-services.json.enc -out CrowderApp/app/google-services.json -d
 before_script:
-  - cd CrowderApp
-  - yes | sdkmanager "platforms;android-30"
-  - chmod +x gradlew
-
+- cd CrowderApp
+- yes | sdkmanager "platforms;android-30"
+- chmod +x gradlew
 script:
-  - ./gradlew clean build
-  - ./gradlew test
+- "./gradlew clean build"
+- "./gradlew test"
