--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,8 @@ android:
   - android-sdk-license-.+
   - google-gdk-license-.+
 before_install:
-- openssl aes-256-cbc -K $encrypted_ba513513456f_key -iv $encrypted_ba513513456f_iv
-  -in google-services.json.enc -out CrowderApp/app/google-services.json -d
-  
+- openssl aes-256-cbc -K $encrypted_ba513513456f_key -iv $encrypted_ba513513456f_iv -in google-services.json.enc -out CrowderApp/app/google-services.json -d
+
 before_script:
 - cd CrowderApp
 - yes | sdkmanager "platforms;android-30"
