--- a/CrowderApp/app/build.gradle
+++ b/CrowderApp/app/build.gradle
@@ -32,6 +32,7 @@ android {
     testOptions {
         unitTests {
             includeAndroidResources = true
+            returnDefaultValues = true
         }
     }
 }
