--- a/CrowderApp/app/build.gradle
+++ b/CrowderApp/app/build.gradle
@@ -44,9 +44,12 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
 
     testImplementation 'org.robolectric:robolectric:4.4'
     testImplementation "org.mockito:mockito-core:2.+"
+    androidTestImplementation 'com.jayway.android.robotium:robotium-solo:5.3.1'
 
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:26.6.0')
