--- a/CrowderApp/app/build.gradle
+++ b/CrowderApp/app/build.gradle
@@ -10,11 +10,10 @@ android {
     defaultConfig {
         applicationId "com.example.crowderapp"
         multiDexEnabled true
-        minSdkVersion 16
+        minSdkVersion 27
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -55,4 +54,11 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.6.0')
     // Import Firestore DB
     implementation 'com.google.firebase:firebase-firestore'
+
+    // androidX utils
+    implementation "androidx.activity:activity:1.2.2"
+    implementation "androidx.fragment:fragment:1.3.2"
+
+    // Location services
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 }
