--- a/CrowderApp/app/src/main/AndroidManifest.xml
+++ b/CrowderApp/app/src/main/AndroidManifest.xml
@@ -19,4 +19,6 @@
         </activity>
     </application>
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
 </manifest>
