--- a/CrowderApp/build.gradle
+++ b/CrowderApp/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     repositories {
         google()
+        mavenLocal()
         jcenter()
     }
     dependencies {
@@ -16,6 +17,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenLocal()
         jcenter()
     }
 }
