Added generating barcodes

--- a/CrowderApp/app/build.gradle
+++ b/CrowderApp/app/build.gradle
@@ -65,4 +65,8 @@ dependencies {
     // mlkit barcode scanning
     implementation 'com.google.mlkit:barcode-scanning:16.1.1'
 
+    // QR generator
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+
 }
