--- a/CrowderApp/app/src/main/AndroidManifest.xml
+++ b/CrowderApp/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar">
-        <activity android:name=".StatsActivity"></activity>
+        <activity android:name=".QRCodeActivity"></activity>
+        <activity android:name=".StatsActivity" />
         <activity
             android:name=".ScanActivity"
             android:clearTaskOnLaunch="true"
