--- a/CrowderApp/app/build.gradle
+++ b/CrowderApp/app/build.gradle
@@ -35,6 +35,9 @@ android {
     }
 }
 
+repositories {
+    maven { url 'https://jitpack.io' }
+}
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -75,5 +78,8 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
 
     implementation 'com.budiyev.android:code-scanner:2.1.0'
+
+    // For graphs/plots
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 }
